PO-1913/Fix unit tests